# whisper-git

./: .gitignore  AETNA_CORRECTION.md  Cargo.toml  LICENSE-APACHE  README.md
.claude/agents/: ux-screenshot-reviewer.md
.github/workflows/: ci.yml  release.yml
assets/fonts/: LICENSE
docs/: aetna-port.md  async-engine-redesign.md  design-submodule-worktree-integration.md  design_feedback_feb2026.md  render_engine.md  user_needs.md  ux-design-2026-02.md  ux_design.md
packaging/aur/: .SRCINFO  PKGBUILD  whisper-git.desktop
src/: ai.rs  app_async_polling.rs  app_bootstrap.rs  app_diagnostic_reload.rs  app_input_handlers.rs  app_message_processing.rs  app_modal_state.rs  app_repo_lifecycle.rs  app_scheduling.rs  app_settings_tokens.rs  app_shortcuts.rs  app_sidebar_actions.rs  app_tab_management.rs  app_window_events.rs  async_polling.rs  avatar.rs  ci.rs  commit_details.rs  commit_graph.rs  config.rs  crash_log.rs  dialogs.rs  diff_view.rs  git.rs  git_async.rs  github.rs  gitlab.rs  host.rs  lib.rs  main.rs  messages.rs  receiver_poll.rs  recent.rs  rendering.rs  repo_tab.rs  screenshot_mode.rs  sidebar.rs  staging.rs  submodule_nav.rs  text.rs  (+4 more)
src/_legacy/: README.md  app_async_polling.rs
src/git/: async_ops.rs  diff.rs  hunk.rs  mod.rs  refs.rs  status.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/messages/: app_message.rs  history_diff.rs  reload_diagnostics.rs  remote_sync.rs  repo_ops.rs  staging_commit.rs  types.rs  view_state.rs
src/messages/history_diff/: commit_view.rs  graph_nav.rs
src/messages/repo_ops/: async_ops.rs  mutation_ops.rs
src/renderer/: context.rs  mod.rs  offscreen.rs  screenshot.rs  surface.rs
src/ui/: avatar.rs  icon.rs  layout.rs  mod.rs  spline.rs  text.rs  text_util.rs  widget.rs
src/ui/layout/: flex.rs  mod.rs  screen.rs
src/ui/widgets/: branch_name_dialog.rs  button.rs  clone_dialog.rs  confirm_dialog.rs  context_menu.rs  dropdown.rs  error_dialog.rs  file_list.rs  header_bar.rs  label.rs  merge_dialog.rs  mod.rs  panel.rs  pull_dialog.rs  push_dialog.rs  rebase_dialog.rs  remote_dialog.rs  repo_dialog.rs  scrollbar.rs  search_bar.rs  settings_dialog.rs  shortcut_bar.rs  submodule_strip.rs  tab_bar.rs  text_area.rs  text_input.rs  toast.rs  token_dialog.rs  tooltip.rs
src/views/: branch_sidebar.rs  commit_detail.rs  commit_graph.rs  commit_list.rs  diff_view.rs  mod.rs  secondary_repos.rs  staging_well.rs  welcome.rs
src/widgets/: brand_icons.rs  diff.rs  mod.rs
