[package]
name = "whisper-git"
version = "0.1.0"
edition = "2024"

[dependencies]
# Graphics
vulkano = "0.35"
vulkano-shaders = "0.35"
winit = "0.30"

# Git
git2 = "0.20"

# Text rendering (SDF via EDT from fontdue coverage)
fontdue = "0.9"

# Screenshot/image output
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# HTTP & hashing for gravatar
ureq = "2"
md5 = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Clipboard
arboard = "3"

# Native file dialogs
rfd = "0.15"

# Filesystem watching
notify = "8"

# Utilities
bytemuck = { version = "1.21", features = ["derive"] }
anyhow = "1.0"
half = "2.4"
