[package]
name = "whisper-git"
version = "0.3.0"
edition = "2024"
description = "GPU-accelerated Git client built in Rust with Vulkan"
license = "MIT OR Apache-2.0"
repository = "https://github.com/computer-whisperer/whisper-git"
homepage = "https://github.com/computer-whisperer/whisper-git"
readme = "README.md"
keywords = ["git", "vulkan", "gui", "graphics"]
categories = ["development-tools", "gui"]

[dependencies]
# Graphics
vulkano = "0.35"
vulkano-shaders = "0.35"
winit = "0.30"

# Git
git2 = "0.20"

# Text rendering (SDF via EDT from fontdue coverage)
fontdue = "0.9"

# Screenshot/image output
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# HTTP & hashing for gravatar
ureq = { version = "3", features = ["json"] }
md5 = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Clipboard
arboard = { version = "3", features = ["wayland-data-control"] }

# Native file dialogs
rfd = "0.17"

# Filesystem watching
notify = "8"

# Utilities
bytemuck = { version = "1.21", features = ["derive"] }
anyhow = "1.0"
half = "2.4"

# Secure credential storage (platform-specific backends)
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
