[package]
name = "whisper-git"
version = "0.3.3"
edition = "2024"
description = "GPU-accelerated Git client built in Rust with Vulkan"
license = "MIT OR Apache-2.0"
repository = "https://github.com/computer-whisperer/whisper-git"
homepage = "https://github.com/computer-whisperer/whisper-git"
readme = "README.md"
keywords = ["git", "vulkan", "gui", "graphics"]
categories = ["development-tools", "gui"]

[dependencies]
# UI toolkit
aetna-core = "0.3.6"
aetna-vulkano = "0.3.6"

# Graphics
vulkano = "0.35"
winit = "0.30"

# Git
git2 = "0.20"

# Screenshot/image output
image = { version = "0.25", default-features = false, features = ["png"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Clipboard
arboard = { version = "3", features = ["wayland-data-control"] }

# Native file dialogs
rfd = "0.17"

# HTTP (CI status fetchers — GitHub Actions, GitLab pipelines, Gravatar fetches)
ureq = { version = "3", features = ["json"] }

# MD5 — Gravatar's URL is keyed off the MD5 of the lowercased email.
md5 = "0.8"

# Filesystem watching — drives auto-refresh on external git ops + file edits.
# Used by `crate::watcher::RepoWatcher`.
notify = "8"

# Utilities
anyhow = "1.0"

# Secure credential storage (platform-specific backends)
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
